<resources>
    <string name="app_name">VeryNicePhotoEditor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_rotation_degree">Enter rotation degree</string>
    <string name="scaling_factor_0_1">Scaling factor: 0.1</string>
    <string name="degree_0">Degree: 0</string>
    <string name="fxaa">FXAA</string>
    <string name="spline_rectangle">Spline / Rectangle</string>
    <string name="enable_filtrations_for_cube_image">Enable filtrations for cube image</string>
    <string name="go_back">Go back</string>
    <string name="canvas_for_cube">Canvas for cube</string>
    <string name="canvas_for_splines">Canvas for splines</string>
    <string name="save_button">save button</string>
    <string name="image">image</string>
    <string name="top_bar">top bar</string>
    <string name="load_picture">load picture</string>
    <string name="radius_3">Radius: 3</string>
    <string name="strength_0_10">Strength: 0.10</string>
    <string name="take_a_photo">take a photo</string>
    <string name="apply_filter">apply filter</string>
    <string name="kernel_size_3">Kernel size: 3</string>
    <string name="contrast_0">Contrast: 0</string>
    <string name="threshold_500">Threshold: 500</string>
    <string name="upload">upload</string>
    <string name="background">background</string>
    <string name="diffusion_1">Diffusion: 1</string>
    <string name="nice_cat_image">nice cat image</string>
    <string name="welcome_text">welcome text</string>
    <string name="main_frame">main frame</string>
    <string name="go_to_splines">go to splines</string>
    <string name="go_to_cube">go to cube</string>
    <string name="go_to_retush">go to retush</string>
    <string name="go_to_affines">go to affines</string>
    <string name="strength_0_01">Strength: 0.01</string>
    <string name="neighbourhood_1">Neighbourhood: 1</string>
    <string name="pixel_size_1">Pixel size: 1</string>
    <string name="bottom_bar">bottom bar</string>
    <string name="button_for_making_a_photo">button for making a photo</string>
    <string name="go_back_button">go back button</string>
    <string name="confirm_button">confirm button</string>
    <string name="value_0">Value: 0</string>
    <string name="threshold_0">Threshold: 0</string>
    <string name="b_1">b: 1</string>
    <string name="a_1">a: 1</string>
    <string name="enter_text_here">Enter text here</string>
</resources>