<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:ignore="ExtraText"
    tools:openDrawer="start">

    <ImageView
        android:id="@+id/cubeCanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/canvas_for_cube"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#292E32"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/go_back"
            android:src="@drawable/back_button" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/filtrationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:layout_toStartOf="@+id/backButton"
            android:gravity="center"
            android:text="@string/enable_filtrations_for_cube_image"
            android:textColor="#FFFFFF"
            android:thumbTint="#007AFF"
            android:trackTint="#007AFF"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>